@@ -11,7 +11,7 @@ OBJ    =.o
 EXE    =.exe
 RM     =cmd /c del
 DIRSEP =/
-CFLAGS =-I../h -I../.. -c -O3 $(DEBUG) -DOS2
+CFLAGS =-I../h -I../.. -c -O3 $(DEBUG) -DOS2 -Wall -Wno-char-subscripts -funsigned-char
 LFLAGS =-Zcrtdll $(DEBUG)
 CDEFS  =-DOS2
 CC     =gcc
